# generic-predicates

./: Cargo.toml  README.md
examples/: predicated.rs
generic-predicates-macro/: Cargo.toml
generic-predicates-macro/src/: lib.rs
src/: lib.rs
