[package]
name = "generic-predicates-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lachlansneff/generic-predicates"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
